--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cards-vite",
-  "homepage": "https://jalxby.github.io/rtk-cards",
+  "homepage": "https://jalxby.github.io/cards",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
+    "@hookform/resolvers": "^3.1.0",
     "@mantine/carousel": "^6.0.11",
     "@mantine/core": "^6.0.11",
     "@mantine/dates": "^6.0.11",
@@ -31,31 +32,39 @@
     "@tiptap/starter-kit": "^2.0.3",
     "@types/axios": "^0.14.0",
     "@types/node": "^20.2.5",
+    "babel-eslint": "10.x",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^8.0.0-rc05",
+    "eslint-plugin-flowtype": "4.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react": "^7.32.2",
     "formik": "^2.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.41.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
+    "eslint-plugin-react-refresh": "^0.4.1",
     "prettier": "2.8.8",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
