--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "cards-vite",
+  "name": "cards",
   "homepage": "https://jalxby.github.io/cards",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
