--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "sort-by": "^1.2.0",
+    "styled-components": "^5.3.11",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vitejs/plugin-react": "^4.0.0",
