--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cards-vite",
   "homepage": "https://jalxby.github.io/cards-vite",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
