--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@mantine/prism": "^6.0.11",
     "@mantine/spotlight": "^6.0.11",
     "@mantine/tiptap": "^6.0.11",
+    "@mui/icons-material": "^5.11.16",
+    "@nextui-org/react": "^1.0.0-beta.13",
     "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.20.0",
     "@tiptap/extension-link": "^2.0.3",
