--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
     "@types/axios": "^0.14.0",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.2.5",
     "babel-eslint": "10.x",
     "dayjs": "^1.11.7",
@@ -46,6 +47,7 @@
     "formik": "^2.4.0",
     "gh-pages": "^5.0.0",
     "localforage": "^1.10.0",
+    "lodash.debounce": "^4.0.8",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -56,6 +58,7 @@
     "sass": "^1.62.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
+    "usehooks-ts": "^2.9.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
