--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "sass": "^1.62.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.11",
+    "use-debounce": "^9.0.4",
     "usehooks-ts": "^2.9.1",
     "yup": "^1.2.0"
   },
