--- a/package.json
+++ b/package.json
@@ -13,21 +13,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@hookform/resolvers": "^3.1.0",
     "@mantine/carousel": "^6.0.11",
     "@mantine/core": "^6.0.11",
-    "@mantine/dates": "^6.0.11",
-    "@mantine/dropzone": "^6.0.11",
     "@mantine/form": "^6.0.11",
     "@mantine/hooks": "^6.0.11",
     "@mantine/modals": "^6.0.11",
     "@mantine/notifications": "^6.0.11",
     "@mantine/nprogress": "^6.0.11",
     "@mantine/prism": "^6.0.11",
-    "@mantine/spotlight": "^6.0.11",
-    "@mantine/tiptap": "^6.0.11",
-    "@mui/icons-material": "^5.11.16",
     "@nextui-org/react": "^1.0.0-beta.13",
     "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.20.0",
@@ -47,7 +42,6 @@
     "formik": "^2.4.0",
     "gh-pages": "^5.0.0",
     "localforage": "^1.10.0",
-    "lodash.debounce": "^4.0.8",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -57,8 +51,7 @@
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "sort-by": "^1.2.0",
-    "styled-components": "^5.3.11",
-    "use-debounce": "^9.0.4",
+    "styled-components": "^6.0.0-rc.3",
     "usehooks-ts": "^2.9.1",
     "yup": "^1.2.0"
   },
@@ -74,7 +67,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "prettier": "2.8.8",
-    "typescript": "^5.0.2",
+    "typescript": "5.0.4",
     "vite": "^4.3.9",
     "vite-plugin-eslint": "^1.8.1"
   }
