--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.0",
     "@mantine/carousel": "^6.0.11",
     "@mantine/core": "^6.0.11",
@@ -23,6 +24,7 @@
     "@mantine/notifications": "^6.0.11",
     "@mantine/nprogress": "^6.0.11",
     "@mantine/prism": "^6.0.11",
+    "@mui/material": "^5.13.5",
     "@nextui-org/react": "^1.0.0-beta.13",
     "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.20.0",
@@ -52,6 +54,7 @@
     "sass": "^1.62.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.0.0-rc.3",
+    "use-debounce": "^9.0.4",
     "usehooks-ts": "^2.9.1",
     "yup": "^1.2.0"
   },
